--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.3.1",
     "dash.js": "^4.0.0",
     "framer-motion": "^12.34.2",
     "hls.js": "^1.6.15",
