--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.2",
     "@vercel/speed-insights": "^1.3.1",
     "dash.js": "^4.0.0",
+    "drizzle-orm": "^0.45.1",
     "framer-motion": "^12.34.2",
     "hls.js": "^1.6.15",
     "lucide-react": "^0.574.0",
@@ -23,8 +25,11 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^17.3.1",
+    "drizzle-kit": "^0.31.9",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
