--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@neondatabase/serverless": "^1.0.2",
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
+    "bcryptjs": "^3.0.3",
     "dash.js": "^4.0.0",
     "drizzle-orm": "^0.45.1",
     "framer-motion": "^12.34.2",
